--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@ngx-gallery/core": "^3.0.2",
+    "@ngx-gallery/gallerize": "^3.0.2",
+    "@ngx-gallery/lightbox": "^3.0.2",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "@nicky-lenaers/ngx-scroll-to": "^1.0.0",
