--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.3",
     "@angular/animations": "^6.1.0",
     "@angular/cdk": "github:angular/cdk-builds",
     "@angular/common": "^6.1.0",
@@ -28,6 +29,8 @@
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "@nicky-lenaers/ngx-scroll-to": "^1.0.0",
+    "agm-direction": "^0.6.0",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.0.0",
