--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@ngx-translate/http-loader": "^3.0.1",
     "@nicky-lenaers/ngx-scroll-to": "^1.0.0",
     "agm-direction": "^0.6.0",
+    "angularfire2": "^5.0.0-rc.11",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
+    "firebase": "^5.3.1",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
