--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.0.0-beta.3",
-    "@angular/animations": "^6.1.0",
-    "@angular/cdk": "github:angular/cdk-builds",
+    "@angular/animations": "^6.1.10",
+    "@angular/cdk": "^6.4.3",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
-    "@angular/material": "github:angular/material2-builds",
+    "@angular/material": "^6.4.3",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
