--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.0.0-beta.3",
-    "@angular/animations": "^6.1.10",
+    "@angular/animations": "^7.2.2",
     "@angular/cdk": "^6.4.3",
-    "@angular/common": "^6.1.0",
-    "@angular/compiler": "^6.1.0",
-    "@angular/core": "^6.1.10",
-    "@angular/forms": "^6.1.0",
-    "@angular/http": "^6.1.0",
+    "@angular/common": "^7.2.2",
+    "@angular/compiler": "^7.2.2",
+    "@angular/core": "^7.2.2",
+    "@angular/forms": "^7.2.2",
+    "@angular/http": "^7.2.2",
     "@angular/material": "^6.4.3",
-    "@angular/platform-browser": "^6.1.0",
-    "@angular/platform-browser-dynamic": "^6.1.0",
-    "@angular/router": "^6.1.0",
+    "@angular/platform-browser": "^7.2.2",
+    "@angular/platform-browser-dynamic": "^7.2.2",
+    "@angular/router": "^7.2.2",
     "@ngx-gallery/core": "^3.0.2",
     "@ngx-gallery/gallerize": "^3.0.2",
     "@ngx-gallery/lightbox": "^3.0.2",
@@ -33,17 +33,18 @@
     "angularfire2": "^5.0.0-rc.11",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
-    "firebase": "^5.5.9",
+    "firebase": "^5.8.2",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.0.0",
+    "tslib": "^1.9.0",
     "web-animations-js": "^2.3.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.7.0",
-    "@angular/cli": "~6.1.1",
-    "@angular/compiler-cli": "^6.1.0",
-    "@angular/language-service": "^6.1.0",
+    "@angular-devkit/build-angular": "~0.12.0",
+    "@angular/cli": "~7.2.3",
+    "@angular/compiler-cli": "^7.2.2",
+    "@angular/language-service": "^7.2.2",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -58,6 +59,18 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
-  }
+    "typescript": "~3.2.4"
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 6.1.1.",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alleyex/andromeda.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/alleyex/andromeda/issues"
+  },
+  "homepage": "https://github.com/alleyex/andromeda#readme"
 }
