--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.0.0-beta.3",
-    "@angular/animations": "^7.2.2",
+    "@angular/animations": "^7.2.9",
     "@angular/cdk": "^6.4.3",
-    "@angular/common": "^7.2.2",
-    "@angular/compiler": "^7.2.2",
-    "@angular/core": "^7.2.2",
-    "@angular/forms": "^7.2.2",
-    "@angular/http": "^7.2.2",
+    "@angular/common": "^7.2.9",
+    "@angular/compiler": "^7.2.9",
+    "@angular/core": "^7.2.9",
+    "@angular/forms": "^7.2.9",
+    "@angular/http": "^7.2.9",
     "@angular/material": "^6.4.3",
-    "@angular/platform-browser": "^7.2.2",
-    "@angular/platform-browser-dynamic": "^7.2.2",
-    "@angular/router": "^7.2.2",
+    "@angular/platform-browser": "^7.2.9",
+    "@angular/platform-browser-dynamic": "^7.2.9",
+    "@angular/router": "^7.2.9",
     "@ngx-gallery/core": "^3.0.2",
     "@ngx-gallery/gallerize": "^3.0.2",
     "@ngx-gallery/lightbox": "^3.0.2",
@@ -35,16 +35,16 @@
     "core-js": "^2.5.4",
     "firebase": "^5.8.2",
     "hammerjs": "^2.0.8",
-    "rxjs": "^6.0.0",
+    "rxjs": "^6.4.0",
     "tslib": "^1.9.0",
     "web-animations-js": "^2.3.1",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.12.0",
-    "@angular/cli": "~7.2.3",
-    "@angular/compiler-cli": "^7.2.2",
-    "@angular/language-service": "^7.2.2",
+    "@angular/cli": "^7.3.5",
+    "@angular/compiler-cli": "^7.2.9",
+    "@angular/language-service": "^7.2.9",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
